# shipverse-backend

./: .env copy  .gitignore  README.md  manage.py  pyproject.toml  requirement.txt  requirements.txt
DjangoRestApisPostgreSQL/: asgi.py  settings.py  urls.py  wsgi.py
logs/: normal.log.2023-11-27
shipverse/: admin.py  apps.py  auth.py  bigcommerceviews.py  canadapost_views.py  common.py  constant.py  decorators.py  exceptions.py  middleware.py  models.py  response.py  serializers.py  shopifyviews.py  upsviews.py  urls.py  utils.py  views.py
shipverse/migrations/: 0001_initial.py  0002_initial.py  0003_users_subscription_count.py  0004_users_start_date.py  0005_subscriptions_remove_users_start_date_and_more.py  0006_shop.py  0007_shop_useid.py  0008_rename_useid_shop_userid.py  0009_subscriptions_custmer_id.py  0010_rename_custmer_id_subscriptions_customer_id_and_more.py  0011_subscriptions_end_date.py  0012_subscriptions_cancel_date.py  0013_remove_internationalsettings_customdeclarations_and_more.py  0014_rename_tracknumber_shipment_carrier_and_more.py  0015_alter_shipment_trackingurl.py  0016_users_date_created.py  0017_alter_users_password.py  0018_users_ups_details.py  0019_rename_counrty_users_ups_details_counrty2_and_more.py  0020_rename_ups_account_number_users_ups_details_accountnumber_and_more.py  0021_rename_fullname_users_ups_details_fullname.py  0022_usercarrier_delete_users_ups_details.py  0023_rename_counrty_usercarrier_country.py  0024_alter_users_customerid_alter_users_email_and_more.py  0025_alter_users_customerid_alter_users_email_and_more.py  (+8 more)
